syncstorage-rs (0.21.1-16) +TARGET+; urgency=low

  * Upgraded upstream logging patch

 -- Fritz Elfert <fritz@fritz-elfert.de>  Tue, 02 Dec 2025 12:50:00 -0100

syncstorage-rs (0.21.1-15) +TARGET+; urgency=low

  * initial packaging

 -- Fritz Elfert <fritz@fritz-elfert.de>  Thu, 06 Oct 2025 10:50:00 -0100
