@@ -1,3 +1,9 @@
+syncstorage-rs (0.21.1-17) +TARGET+; urgency=low
+
+  * Deliver debug build in order to be able to log SQL queries
+
+ -- Fritz Elfert <fritz@fritz-elfert.de>  Sat, 06 Dec 2025 17:00:00 -0100
+
 syncstorage-rs (0.21.1-16) +TARGET+; urgency=low
 
   * Upgraded upstream logging patch
